fix price aligning, add  package-lock to gitignore

--- a/client/src/components/Cart/Item.css
+++ b/client/src/components/Cart/Item.css
@@ -16,6 +16,7 @@
 }
 
 .price-value {
+  text-align: right;
   font-weight: bold;
   color: black;
 }
